; ModuleID = '/home/carl/AnghaBench/radare2/libr/asm/arch/xap/extr_dis.c_read_bin.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/asm/arch/xap/extr_dis.c_read_bin.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.state = type { i32, i32 }
%struct.directive = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.state*, %struct.directive*)* @read_bin to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @read_bin(%struct.state* %0, %struct.directive* %1) #0 {
  %3 = alloca %struct.state*, align 8
  %4 = alloca %struct.directive*, align 8
  store %struct.state* %0, %struct.state** %3, align 8
  store %struct.directive* %1, %struct.directive** %4, align 8
  %5 = load %struct.directive*, %struct.directive** %4, align 8
  %6 = getelementptr inbounds %struct.directive, %struct.directive* %5, i32 0, i32 1
  %7 = load %struct.state*, %struct.state** %3, align 8
  %8 = getelementptr inbounds %struct.state, %struct.state* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @memcpy(i32* %6, i32 %9, i32 4)
  %11 = load %struct.state*, %struct.state** %3, align 8
  %12 = getelementptr inbounds %struct.state, %struct.state* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = add nsw i32 %13, 1
  store i32 %14, i32* %12, align 4
  %15 = sext i32 %13 to i64
  %16 = load %struct.directive*, %struct.directive** %4, align 8
  %17 = getelementptr inbounds %struct.directive, %struct.directive* %16, i32 0, i32 0
  store i64 %15, i64* %17, align 8
  ret i32 1
}

declare dso_local i32 @memcpy(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
